# libgod

./: .clangd  .editorconfig  .envrc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  REUSE.toml  cliff.toml  demo.cpp  flake.nix  justfile  makefile  meson.build  meson.options  mkdocs.yml  sample.god
doc/: about.md  book.toml  doxyfile  index.md
doc/source/: SUMMARY.md  conf.py  index.md
doc/source/api-reference/: constants.md  index.md  input.md  ns-god.md  token.md  types.md
doc/theme/: custom.css  fonts.css  index.hbs  onedark.css  syntax.css  tables.css
example/: complex.god  deep.god  directions.god  package.god  string-escapes.god
include/: god.hpp
include/god/: base.hpp  encoding.hpp  input.hpp  meson.build  output.hpp  parse.hpp  pretty.hpp  scanner.hpp  token.hpp  types.hpp  util.hpp  version.hpp  version.hpp.in
include/god/types/: string.hpp
misc/: demo.cpp  god-tool.cpp  libgod.pc.in  pretty-print.cpp  tokens.cpp
misc/scripts/: changelog.pl  make-dist.py
misc/templates/: test.cpp  test.god
src/: base.cpp  encoding.cpp  god.cpp  input.cpp  output.cpp  parse.cpp  pretty.cpp  scanner.cpp  token.cpp  types.cpp  util.cpp
src/god/: input.cpp  parse.cpp  token.cpp  types.cpp
src/types/: string.cpp
subprojects/: utfcpp.wrap
test/: deep-matrix.test.cpp  deep-nested-query.test.cpp  double-max.test.cpp  double-min.test.cpp  empty-list.test.cpp  empty-map.test.cpp  empty-nested-list.test.cpp  false-identifier.test.cpp  god.cpp  identifier-in-list.test.cpp  illegal-identifier.test.cpp  input-file.cpp  input-stream.cpp  integer-max.test.cpp  integer-min.test.cpp  invalid-utf8.test.cpp  matrix.test.cpp  meson.build  mixed.test.cpp  nested.boolean.test.cpp  nested.integer.test.cpp  nested.list.test.cpp  nested.null.test.cpp  nested.string.test.cpp  no-clobber.test.cpp  no-closing-brace.test.cpp  no-opening-brace.test.cpp  no-value.test.cpp  null-identifier.test.cpp  overwrite.test.cpp  src.input.cpp  termination-in-list.test.cpp  token.cpp  true-identifier.test.cpp
test/aux/: deep-matrix.god  deep-nested-query.god  empty-list.god  empty-map.god  empty-nested-list.god  false-identifier.god  identifier-in-list.god  illegal-identifier.god  matrix.god  missing-termination.god  mixed.god  no-closing-brace.god  no-opening-brace.god  no-value.god  null-identifier.god  overwrite.god  termination-in-list.god  true-identifier.god  users.god
